--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        We launched on Pump.fun in January 2025
+                        We will launch in 2025
                       </p>
                     </div>
                   </div>
@@ -575,7 +575,7 @@
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        We launched Official Blue Dick token because, let’s face it, the crypto world needed a good laugh
+                        We`ll launch Official Blue Dick token because, let’s face it, the crypto world needed a good laugh
                         and a little cheeky chaos. With so many serious projects out there trying to reinvent the wheel,
                         we decided it was time to bring back the fun, the memes, and the outrageousness. Inspired by
                         Matt Furie’s wild Hedz, BLUDIC exists to remind everyone that sometimes, you just need to sit back,
