--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Get ready for laughs, gains, and pure degen energy.">
 
-  <title> Blue Dick </title>
+  <title> Blue Guy </title>
 
   <!-- Favicons -->
   <link href="images/favicon.png" rel="icon">
@@ -58,13 +58,13 @@
               </li>
 
               <li>
-                <a href="https://x.com/BLUDIC_COIN" target="_blank">
+                <a href="https://x.com/BLUGUY_C0IN" target="_blank">
                   <img src="images/twitter.png" style="height: 30px;" alt="">
                 </a>
               </li>
 
               <li>
-                <a href="https://t.me/BLUDIC_CHAT" target="_blank">
+                <a href="https://t.me/BLUGUY_CHAT" target="_blank">
                   <img src="images/telegram.png" style="height: 30px;" alt="">
                 </a>
               </li>
@@ -106,23 +106,23 @@
             <div class="banner__content" data-aos="fade-right" data-aos-duration="2000">
 
               <h1>
-                <span class="color--theme-color"> Blue Dick </span>
+                <span class="color--theme-color"> Blue Guy </span>
 
                 Cheese Revolution
 
               </h1>
               <p>
-                Dive into the wild world of Official Blue Dick (BLUDIC), the memecoin inspired by Matt Furie’s iconic Hedz.
+                Dive into the wild world of Official Blue Guy (BLUGUY), the memecoin inspired by Matt Furie’s iconic Hedz.
                 Get ready for laughs, gains, and pure degen energy.
               </p>
               <div class="btn-group">
-                <a href="https://pump.fun/coin/Ak4iWjewkXC6zs8m4rZDjaQAnw6dKqJdcXWoHsMFpump" target="_blank" class="default-btn px-4 ">
+                <a href="https://pump.fun/coin/Evf8CnC2xxjmxKCXSc7fvvxLuVvdhnKXGvDNhRgapump" target="_blank" class="default-btn px-4 ">
                   <span>
 
                     Buy Now
                   </span>
                 </a>
-                <a href="https://www.dextools.io/app/en/solana/pair-explorer/Ak4iWjewkXC6zs8m4rZDjaQAnw6dKqJdcXWoHsMFpump" target="_blank" class="default-btn default-btn--secondary">
+                <a href="https://www.dextools.io/app/en/solana/pair-explorer/Evf8CnC2xxjmxKCXSc7fvvxLuVvdhnKXGvDNhRgapump" target="_blank" class="default-btn default-btn--secondary">
                   <span>
 
                     View Live Chart
@@ -206,10 +206,10 @@
               <div class="collection__header-content">
                 <h2> About Us </h2>
                 <p>
-                  Official Blue Dick (BLUDIC) is more than just a memecoin; it's a movement born from the quirky imagination
-                  of Matt Furie’s legendary Hedz collection. We’ve taken the wild, offbeat spirit of Furie’s art and
+                  Official Blue Guy (BLUGUY) is more than just a memecoin; it's a movement born from the quirky imagination
+                  of Matt Furie’s legendary collection. We’ve taken the wild, offbeat spirit of Furie’s art and
                   brought it to the blockchain, creating a coin that embodies humor, unpredictability, and community. At
-                  $BLUDIC, we’re here to defy convention, inject fun into the crypto space, and build a loyal following
+                  $BLUGUY, we’re here to defy convention, inject fun into the crypto space, and build a loyal following
                   that thrives on the absurd. No boring roadmaps, no empty promises - just pure, unfiltered, degen joy
                   and the potential for life-changing moonshots. Join us and be part of the meme revolution!
                 </p>
@@ -291,7 +291,7 @@
           </div>
           <div class="col-lg-3">
             <div class="collection__btn">
-              <a href="https://pump.fun/coin/Ak4iWjewkXC6zs8m4rZDjaQAnw6dKqJdcXWoHsMFpump" target="_blank" class="default-btn default-btn--secondary   text-center" style="min-width: 220px;">
+              <a href="https://pump.fun/coin/Evf8CnC2xxjmxKCXSc7fvvxLuVvdhnKXGvDNhRgapump" target="_blank" class="default-btn default-btn--secondary   text-center" style="min-width: 220px;">
                 <span><img src="images/pump-logo.png" alt="opensea icon" width="20" height="20">
                   View On Pumpfun
                 </span>
@@ -340,7 +340,7 @@
               Get some sol
             </h5>
             <p>
-              Have SOL in your wallet to switch to BLUDIC. If you don’t have any SOL, you can buy directly on Phantom,
+              Have SOL in your wallet to switch to BLUGUY. If you don’t have any SOL, you can buy directly on Phantom,
               transfer from another wallet, or buy on another exchange and add it to your wallet.
             </p>
 
@@ -355,7 +355,7 @@
             </h5>
             <p>
               Connect to Pump.Fun.
-              Paste the BLUDIC token address into Pump.fun, select the pair, and confirm.
+              Paste the BLUGUY token address into Pump.fun, select the pair, and confirm.
             </p>
 
           </div><!-- /.buy-single -->
@@ -365,10 +365,10 @@
           <div class="buy-single" data-aos="fade-up" data-aos-duration="2500">
             <span class="number">4</span>
             <h5>
-              Swap SOl for BLUDIC
+              Swap SOl for BLUGUY
             </h5>
             <p>
-              Swap your SOL for BLUDIC on Pump.fun. Ensure you have enough SOL to cover transaction fees.
+              Swap your SOL for BLUGUY on Pump.fun. Ensure you have enough SOL to cover transaction fees.
               Confirm the transaction to complete the swap.
             </p>
 
@@ -405,13 +405,13 @@
         <div class="firt">
           <span> CONTRACT ADDRESS </span>
           <p>
-            Ak4iWjewkXC6zs8m4rZDjaQAnw6dKqJdcXWoHsMFpump
+            Evf8CnC2xxjmxKCXSc7fvvxLuVvdhnKXGvDNhRgapump
           </p>
 
         </div><!-- /.firt -->
 
         <div class="btn-cun">
-          <button onclick="copy('Ak4iWjewkXC6zs8m4rZDjaQAnw6dKqJdcXWoHsMFpump','#copy_button_2')" id="copy_button_2" class="copy-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Copied!">
+          <button onclick="copy('Evf8CnC2xxjmxKCXSc7fvvxLuVvdhnKXGvDNhRgapump','#copy_button_2')" id="copy_button_2" class="copy-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Copied!">
             <img src="images/copy.png" alt="copy">
           </button>
         </div><!-- /.btn-cun -->
@@ -474,7 +474,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="token-single" data-aos="fade-up" data-aos-duration="2400">
             <span> TOKEN SYMBOL </span>
-            <h5> BLUDIC </h5>
+            <h5> BLUGUY </h5>
           </div><!-- /.token-single -->
         </div><!-- /.col-lg-4 -->
 
@@ -495,7 +495,7 @@
 
         <div class="col-lg-5">
           <div class="text-lg-start text-center">
-            <img src="images/3-01.png" class="img-fluid" alt="BLUDIC">
+            <img src="images/3-01.png" class="img-fluid" alt="BLUGUY">
           </div><!-- /.text-center -->
         </div><!-- /.col-lg-5 -->
 
@@ -520,7 +520,7 @@
                   <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        - <strong>Fair Launch:</strong> Official launch of BLUDIC on Pump.fun. <br>
+                        - <strong>Fair Launch:</strong> Official launch of BLUGUY on Pump.fun. <br>
                         - <strong>Community Building:</strong> Engage with the community on Twitter, and
                         Telegram.
                         <br>
@@ -537,14 +537,14 @@
                 <div class="accordion-item wow fadeIn" data-wow-delay=".5s">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      How do I get a BLUDIC?
+                      How do I get a BLUGUY?
 
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        Swap SOL for BLUDIC.
+                        Swap SOL for BLUGUY.
                       </p>
                     </div>
                   </div>
@@ -575,10 +575,9 @@
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        We`ll launch Official Blue Dick token because, let’s face it, the crypto world needed a good laugh
+                        We`ll launch Official Blue Guy token because, let’s face it, the crypto world needed a good laugh
                         and a little cheeky chaos. With so many serious projects out there trying to reinvent the wheel,
-                        we decided it was time to bring back the fun, the memes, and the outrageousness. Inspired by
-                        Matt Furie’s wild Hedz, BLUDIC exists to remind everyone that sometimes, you just need to sit back,
+                        we decided it was time to bring back the fun, the memes, and the outrageousness. BLUGUY exists to remind everyone that sometimes, you just need to sit back,
                         embrace the absurd, and bet it all on a coin named after cheese and bitts.
                       </p>
                     </div>
@@ -631,20 +630,20 @@
         <div class="footer__content text-center">
           <h2 class="logo-text">
             <img src="images/logo.png" style="height: 60px; margin-bottom: 12px;" alt="logo"> <br>
-            <span>Blue Dick</span>
+            <span>Blue Guy</span>
           </h2>
           <p style="max-width: 600px; font-size: 14px; color: #b1aeae;" class="mx-auto">
-            BLUDIC brings humour back to the blockchain, proving that success isn’t just about charts and graphs - it’s about connecting with people, embracing the absurd, and riding the wave together.
+            BLUGUY brings humour back to the blockchain, proving that success isn’t just about charts and graphs - it’s about connecting with people, embracing the absurd, and riding the wave together.
           </p>
           <ul class="social justify-content-center">
             <li class="social__item">
-              <a href="https://x.com/BLUDIC_COIN" target="_blank" class="social__link">
+              <a href="https://x.com/BLUGUY_C0IN" target="_blank" class="social__link">
                 <img src="images/twitter.png" style="height: 30px;" alt="">
               </a>
             </li>
 
             <li class="social__item">
-              <a href="https://t.me/BLUDIC_CHAT" target="_blank" class="social__link">
+              <a href="https://t.me/BLUGUY_CHAT" target="_blank" class="social__link">
                 <img src="images/telegram.png" style="height: 30px;" alt="">
               </a>
             </li>
