--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
               </h1>
               <p>
-                Dive into the wild world of Official Blue Guy (BLUGUY), the memecoin inspired by Matt Furie’s iconic Hedz.
+                Dive into the wild world of Official Blue Guy (BLUGUY), the memecoin inspired by Matt Furie’s iconic character.
                 Get ready for laughs, gains, and pure degen energy.
               </p>
               <div class="btn-group">
